--- a/config.env
+++ b/config.env
@@ -1,24 +1,24 @@
 # path to the reference genome
-PATH_TO_HG19REF=/home/your_username/ITD/ref/hg19.all.fasta
+PATH_TO_HG19REF=/home/your_username/Genomon-ITDetector/ref/hg19.fasta
 
 # path to the reference genome (2bit file for blat)
-PATH_TO_BLAT_REF=/home/your_username/ITD/ref/hg19.all.2bit
+PATH_TO_BLAT_REF=/home/your_username/Genomon-ITDetector/ref/hg19.2bit
 
 # path to the ooc file for blat
-PATH_TO_BLAT_OOC=/home/your_username/ITD/ref/11.ooc
+PATH_TO_BLAT_OOC=/home/your_username/Genomon-ITDetector/ref/11.ooc
 
 # path to blat
-PATH_TO_BLAT=/home/your_username/ITD/bin/blat
+PATH_TO_BLAT=/home/your_username/Genomon-ITDetector/bin/blat
 
 # path to BEDtools
-PATH_TO_BEDTOOLS=/home/your_username/ITD/bin/BEDTools-Version-2.14.3/bin
+PATH_TO_BEDTOOLS=/home/your_username/Genomon-ITDetector/bin/BEDTools-Version-2.14.3/bin
 
 # path to CAP3
-PATH_TO_CAP3=/home/your_username/ITD/bin/CAP3
+PATH_TO_CAP3=/home/your_username/Genomon-ITDetector/bin/CAP3
 
 # path to fasta36
-PATH_TO_FASTA=/home/your_username/ITD/bin/fasta-36.3.5c/bin
+PATH_TO_FASTA=/home/your_username/Genomon-ITDetector/bin/fasta-36.3.5c/bin
 
 # path to SAMtools
-PATH_TO_SAMTOOLS=/home/your_username/ITD/bin/samtools-0.1.18
+PATH_TO_SAMTOOLS=/home/your_username/Genomon-ITDetector/bin/samtools-0.1.18
 
