--- a/config.env
+++ b/config.env
@@ -1,24 +1,46 @@
 # path to the reference genome
-PATH_TO_HG19REF=/home/your_username/Genomon-ITDetector/ref/hg19.fasta
+PATH_TO_HG19REF=/home/kchiba/ITD/ref/hg19.all.fasta
 
 # path to the reference genome (2bit file for blat)
-PATH_TO_BLAT_REF=/home/your_username/Genomon-ITDetector/ref/hg19.2bit
+PATH_TO_BLAT_REF=/home/kchiba/ITD/ref/hg19.all.2bit
 
 # path to the ooc file for blat
-PATH_TO_BLAT_OOC=/home/your_username/Genomon-ITDetector/ref/11.ooc
+PATH_TO_BLAT_OOC=/home/kchiba/ITD/ref/11.ooc
 
 # path to blat
-PATH_TO_BLAT=/home/your_username/Genomon-ITDetector/bin/blat
+PATH_TO_BLAT=/home/kchiba/ITD/bin/blat
 
 # path to BEDtools
-PATH_TO_BEDTOOLS=/home/your_username/Genomon-ITDetector/bin/BEDTools-Version-2.14.3/bin
+PATH_TO_BEDTOOLS=/home/kchiba/ITD/bin/BEDTools-Version-2.14.3/bin
 
 # path to CAP3
-PATH_TO_CAP3=/home/your_username/Genomon-ITDetector/bin/CAP3
+PATH_TO_CAP3=/home/kchiba/ITD/bin/CAP3
 
 # path to fasta36
-PATH_TO_FASTA=/home/your_username/Genomon-ITDetector/bin/fasta-36.3.5c/bin
+PATH_TO_FASTA=/home/kchiba/ITD/bin/fasta-36.3.5c/bin
 
 # path to SAMtools
-PATH_TO_SAMTOOLS=/home/your_username/Genomon-ITDetector/bin/samtools-0.1.18
+PATH_TO_SAMTOOLS=/home/kchiba/ITD/bin/samtools-0.1.18
+
+
+# if the mapping quality is less than this parameter value then skip this read
+THRES_MAP_QUALITY=10
+
+# if the read is mapped to more than this parameter value then skip this read
+THRES_MALTI_MAPPED=400
+
+# ignore the soft clipped read length where more than this parameter value of bases
+THRES_SOFT_CLIPPED_LENGTH=20
+
+# ignore the linker insertion size where more than this parameter value of bases
+THRES_JUNC_INSERTION=10
+
+# ignore insertion size where more than this parameter value of bases
+THRES_INSERTION_SIZE=800
+
+# ignore ITD length where less than this parameter value of bases
+THRES_MIN_ITD_LENGTH=10
+
+# ignore ITD length where more than this parameter value of bases
+THRES_MAX_ITD_LENGTH=300
 
