--- a/config.env
+++ b/config.env
@@ -29,7 +29,7 @@ THRES_MAP_QUALITY=10
 # if the read is mapped to more than this parameter value then skip this read
 THRES_MALTI_MAPPED=400
 
-# ignore the soft clipped read length where more than this parameter value of bases
+# ignore the soft clipped read length where less than this parameter value of bases
 THRES_SOFT_CLIPPED_LENGTH=20
 
 # ignore the linker insertion size where more than this parameter value of bases
